# puffin-bench

./: .gitignore  README.md  bench.default.toml  pyproject.toml
scripts/prefect-server/: .env  compose.yaml  start  stop
src/puffin_bench/: __init__.py  bench.py  datasets.py  utils.py  vulnerability.py
src/puffin_bench/puffin/: __init__.py
src/puffin_bench/templates/: quarto.commit.qmd  quarto.commits.qmd  quarto.index.qmd  quarto.yml.in
tests/: test_cores.py
